tests/ui/bad-not.stderr
error: unexpected end of input, expected parentheses
 --> $DIR/bad-not.rs:1:1
  |
1 | #[rustversion::any(not)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected parentheses
 --> $DIR/bad-not.rs:4:23
  |
4 | #[rustversion::any(not, not)]
  |                       ^
